--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!------------------- Meta ------------------->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!------------------- Google Fonts ------------------->
     <link
       href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <!------------------- CSS Files ------------------->
+    <!-- index CSS -->
     <link rel="stylesheet" href="css/index.css" />
-    <link rel="stylesheet" href="css/media.css">
-    <title>Document</title>
+    <!-- Media CSS -->
+    <link rel="stylesheet" href="css/media.css" />
+    <!------------------- WebSite Title ------------------->
+    <title>Grid Layout</title>
   </head>
   <body>
+    <!------------------- Start Layout ------------------->
     <div class="container">
+      <!-- item-1 -->
       <div class="item-1">
         <div class="contant">
           <p class="p-gray">LEARN MORE</p>
@@ -24,6 +32,7 @@
         </div>
       </div>
 
+      <!-- item-2 -->
       <div class="item-2">
         <div class="inner">
           <p class="p-gray">LEARN MORE</p>
@@ -32,6 +41,7 @@
         </div>
       </div>
 
+      <!-- item-3 -->
       <div class="item-3">
         <div class="img">
           <img src="image/Keyboard.png" alt="Keyboard" />
@@ -43,6 +53,7 @@
         </div>
       </div>
 
+      <!-- item-4 -->
       <div class="item-4">
         <div class="right">
           <div class="desc">
@@ -62,6 +73,7 @@
         </div>
       </div>
 
+      <!-- item-5 -->
       <div class="item-5">
         <div class="circle">
           <p>POPULAR</p>
@@ -80,6 +92,7 @@
         </div>
       </div>
 
+      <!-- item-6 -->
       <div class="item-6">
         <div class="content">
           <img src="image/Controller.png" alt="" />
@@ -88,39 +101,40 @@
         </div>
       </div>
 
+      <!-- item-7 -->
       <div class="item-7">
-
         <div class="best">BEST CHOICE</div>
 
         <div class="content">
           <h2>Much MuchBetter Experience</h2>
           <img src="image/iPad Pro.png" alt="" />
         </div>
-
       </div>
 
+      <!-- item-8 -->
       <div class="item-8">
         <div class="circle">
-          <img src="image/twitter.png" alt="">
+          <img src="image/twitter.png" alt="" />
           <h2>Connect with Twitter</h2>
         </div>
       </div>
 
+      <!-- item-9 -->
       <div class="item-9">
         <p>POPULAR</p>
         <h2>Much MuchBetter Experience</h2>
       </div>
 
+      <!-- item-10 -->
       <div class="item-10">
         <div class="img">
-          <img src="image/TV.png" alt="">
+          <img src="image/TV.png" alt="" />
         </div>
         <div class="contant">
-          <h2>More than just a display,  it’s a vision</h2>
+          <h2>More than just a display, it’s a vision</h2>
         </div>
       </div>
-
     </div>
-  
+    <!------------------- End Navbar ------------------->
   </body>
 </html>
